feat: catalog-driven SDK versions, Java 17, Room 3, parameterized exclusions, firebase plugin